<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView1" android:textSize="46dip"  android:text="@string/ab_title" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_marginTop="10dip"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/ab_app_name" android:layout_gravity="center" android:textSize="36dip" android:layout_marginTop="15dip"></TextView>
    
    <TextView
        android:id="@+id/textView10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Conceived 1/23/12"
        android:textSize="18dip" />
    
    <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout1" android:layout_height="fill_parent">
    <LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/ab_fintan_contribution" android:layout_height="wrap_content" android:layout_marginTop="100dip" android:layout_width="wrap_content" android:id="@+id/textView3"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/ab_fintan_name" android:layout_height="wrap_content" android:textSize="@dimen/ab_name_text_size" android:layout_gravity="right" android:layout_width="wrap_content" android:id="@+id/textView4"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/ab_nighelles_contribution" android:layout_height="wrap_content" android:layout_marginTop="24dip" android:layout_width="wrap_content" android:id="@+id/textView5"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/ab_nighelles_name" android:layout_height="wrap_content" android:textSize="@dimen/ab_name_text_size" android:layout_gravity="right" android:layout_width="wrap_content" android:id="@+id/textView6"></TextView>
    </LinearLayout>
    
    </RelativeLayout>
    
  </LinearLayout>
</ScrollView>
